# rstsr

./: .gitignore  Cargo.toml  katex-header.html  readme.md  rustfmt.toml  tarpaulin.toml
notes/: book.toml
notes/src/: SUMMARY.md  intro.md  tensor-and-own.md  tensor_base.md
notes/theme/: index.hbs
rstsr-core/: Cargo.toml
rstsr-core/benches/faer_gemm/: main.rs
rstsr-core/src/: error.rs  flags.rs  lib.rs  prelude_dev.rs  tensorbase.rs
rstsr-core/src/cpu_backend/: assignment.rs  matmul.rs  operators.rs
rstsr-core/src/cpu_backend/operators/: op_binary.rs  op_ternary.rs  op_with_func.rs
rstsr-core/src/dev_utilities/: mod.rs
rstsr-core/src/device_cpu_faer/: assignment.rs  creation.rs  device.rs
rstsr-core/src/device_cpu_faer/operators/: op_binary.rs  op_ternary.rs  op_with_func.rs
rstsr-core/src/device_cpu_rayon/: assignment.rs  creation.rs  device.rs  mod.rs
rstsr-core/src/device_cpu_rayon/operators/: mod.rs  op_with_func.rs
rstsr-core/src/device_cpu_serial/: assignment.rs  creation.rs  device.rs  matmul.rs  mod.rs
rstsr-core/src/device_cpu_serial/operators/: mod.rs  op_binary.rs  op_ternary.rs  op_with_func.rs
rstsr-core/src/device_faer/: assignment.rs  conversion.rs  creation.rs  device.rs  matmul.rs  matmul_impl.rs  mod.rs
rstsr-core/src/device_faer/operators/: mod.rs  op_binary.rs  op_ternary.rs  op_with_func.rs
rstsr-core/src/docs/: api_specification.md
rstsr-core/src/feature_rayon/: assignment.rs  device.rs  layout_par_iter.rs  matmul_naive.rs  mod.rs  op_with_func.rs
rstsr-core/src/format/: format_layout.rs  format_tensor.rs  mod.rs
rstsr-core/src/layout/: broadcast.rs  dim.rs  indexer.rs  iterator.rs  iterator_col_major.rs  iterator_row_major.rs  layoutbase.rs  matmul.rs  mod.rs  rearrangement.rs  shape.rs  slice.rs
rstsr-core/src/storage/: creation.rs  device.rs  matmul.rs  mod.rs
rstsr-core/src/storage/operators/: mod.rs  op_binary.rs  op_tenary.rs  op_ternary.rs  op_with_func.rs
rstsr-core/src/tensor/: asarray.rs  creation.rs  data.rs  device_conversion.rs  ext_conversion.rs  manuplication.rs  map_elementwise.rs  matmul.rs  mod.rs  operators.rs  ownership_conversion.rs
rstsr-core/src/tensor/operators/: mod.rs  op_binary_arithmetic.rs  op_binary_arithmetic_scalar.rs  op_binary_assign.rs  op_binary_with_output.rs  op_unary.rs  op_with_func.rs
src/: base.rs  base_data.rs  base_device.rs  base_layout.rs  data.rs  device.rs  error.rs  flags.rs  indexer.rs  layout.rs  lib.rs  prelude_dev.rs  slice.rs  tensor.rs  tensorbase.rs
src/cpu_backend/: assignment.rs  base.rs  base_device.rs  creation.rs  device.rs  mod.rs  op_basic.rs  op_binary.rs  operators.rs
src/cuda_backend/: base_device.rs  device.rs  error.rs  mod.rs
src/dev_utilities/: mod.rs
src/docs/: api_specification.md  lib.md
src/format/: format.rs  format_layout.rs  format_tensor.rs  mod.rs
src/layout/: broadcast.rs  dim.rs  indexer.rs  iterator.rs  layout.rs  layoutbase.rs  mod.rs  readme.md  shape.rs  slice.rs  stride.rs
src/storage/: assignment.rs  creation.rs  data.rs  device.rs  mod.rs  op_basic.rs  op_binary.rs  operators.rs
src/tensor/: asarray.rs  creation.rs  data.rs  iterator.rs  iterator_and_clone.rs  layout_manuplication.rs  manuplication.rs  mod.rs  op_basic.rs  operators.rs  ownership_conversion.rs  view.rs
