[package]
name = "rest_tensor2"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = { version = "0.2" }
num-complex = { version = "0.4" }
cudarc = { version = "0.11", default-features = false, features = ["cublas", "cuda-version-from-build-system"], optional = true }
thiserror = { version = "1.0" }

[dev-dependencies]
rest_tensors = { path = "../rest_tensors", version = "*" }
anyhow = { version = "1.0" }
rand = { version = "0.8" }
itertools = { version = "0.13" }
approx = { version = "0.5" }
candle-core = { version = "0.6", features = ["cuda"] }
burn-core = { version = "0.12", features = ["ndarray"] }
ndarray = { version = "0.15" }

[profile.dev]
opt-level = 3
overflow-checks = true

[features]
default = []
cuda = []

