[package]
name = "rstsr"
version = "0.1.0"
edition = "2021"

[dependencies]
num = { version = "0.4" }
thiserror = { version = "1.0" }

[dev-dependencies]
rest_tensors = { path = "../rest_tensors", version = "*" }
anyhow = { version = "1.0" }
rand = { version = "0.8" }
itertools = { version = "0.13" }
approx = { version = "0.5" }
# cudarc = { version = "0.11", default-features = false, features = ["cublas", "cuda-version-from-build-system"], optional = true }
candle-core = { version = "0.6", features = [] }
# burn-core = { version = "0.12", features = ["ndarray"] }
ndarray = { version = "0.15" }

[profile.dev]
opt-level = 3
overflow-checks = true

[features]
default = ["c_prefer"]
c_prefer = []
cuda = []

