[workspace]
resolver = "2"
members = [
    "rstsr-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# basic dependencies
num = { version = "0.4" }
thiserror = { version = "1.0" }
itertools = { version = "0.13" }
half = { version = "2.4", features = ["num-traits"] }
# optional dependencies
rayon = { version = "1.10" }
faer = { version = "0.19" }
faer-ext = { version = "0.3" }
faer-entity = { version = "0.19" }
# dev dependencies
anyhow = { version = "1.0" }
rand = { version = "0.8" }
approx = { version = "0.5" }
ndarray = { version = "0.15" }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[profile.coverage]
inherits = "dev"
opt-level = 0
