[package]
name = "rstsr"
version = "0.1.0"
edition = "2021"

[dependencies]
num = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
half = { workspace = true }
rayon = { workspace = true, optional = true }
faer = { workspace = true, optional = true }
faer-ext = { workspace = true, optional = true }
faer-entity = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
itertools = { workspace = true }
approx = { workspace = true }
ndarray = { workspace = true }

[features]
default = ["c_prefer"]
std = []
c_prefer = []
rayon = ["dep:rayon"]
faer = ["rayon", "dep:faer", "dep:faer-ext", "dep:faer-entity"]
